--- a/app/src/main/res/layout/activity_appointment_booking.xml
+++ b/app/src/main/res/layout/activity_appointment_booking.xml
@@ -27,31 +27,9 @@
 
             <include
                 android:id="@+id/toolbar"
-                layout="@layout/main_toolbar" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
+                layout="@layout/main_toolbar"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/calendarView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="@string/appointment_book_title" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="19dp"
-                android:layout_marginTop="97dp"
-                android:layout_marginEnd="334dp"
-                android:layout_marginBottom="11dp"
-                android:text="TextView"
-                app:layout_constraintBottom_toTopOf="@+id/calendarView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -60,15 +38,14 @@
                 android:id="@+id/calendarView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="13dp"
+                android:layout_marginTop="40dp"
                 android:background="@color/colorPrimary"
                 android:padding="10dp"
                 app:layout_constraintBottom_toTopOf="@+id/slotListRecyclerView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                 app:textColorSelected="#FFFF" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -76,15 +53,43 @@
                 android:layout_width="410dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="1dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="1dp"
-                android:layout_marginBottom="10dp"
 
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.03"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/appointment_book_title"
+                android:textAllCaps="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/calendarView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+            <Button
+                android:id="@+id/toConfirmationBtn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="15dp"
+                android:text="@string/next_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/slotListRecyclerView" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
